--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -14,23 +14,23 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: hsl(198deg, 100%, 6%);
+  background-color: hsl(198, 100%, 6%);
 }
 
 ::-webkit-scrollbar-thumb {
-  border: 2px solid hsl(198deg, 100%, 6%);
+  border: 2px solid hsl(198, 100%, 6%);
   border-radius: 50px;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: hsl(198deg, 100%, 6%);
+  background-color: hsl(198, 100%, 6%);
 }
 
 a, a:visited, a:active {
   text-decoration: none;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
 }
 
 li {
@@ -44,7 +44,7 @@ li {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,33 +56,33 @@ li {
 }
 
 .btn {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   font-size: 1.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
   gap: 0.5rem;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
   padding: 1rem 2rem;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   overflow: hidden;
 }
 .btn span {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   font-weight: 700;
   letter-spacing: 1.2px;
   flex-wrap: nowrap;
   transition: all 700ms ease-in-out;
 }
 .btn svg {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   transition: all 700ms ease-in-out;
   width: 20px;
 }
 .btn:hover, .btn:visited {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
 }
 .btn:hover span, .btn:visited span {
   transform: translateX(15px);
@@ -98,9 +98,9 @@ li {
   border: none;
   margin: 8rem auto;
   font-weight: 700;
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
   background-color: transparent;
-  border: 3px solid hsl(167deg, 82%, 65%);
+  border: 3px solid hsl(167, 82%, 65%);
   transition: all 500ms ease-in-out;
 }
 .btn-view-all::after {
@@ -111,7 +111,7 @@ li {
   left: -20px;
   width: 30px;
   height: 15px;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 .btn-view-all::before {
   content: "";
@@ -121,11 +121,11 @@ li {
   right: -20px;
   width: 30px;
   height: 15px;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 .btn-view-all:hover {
-  background-color: hsl(167deg, 82%, 65%);
-  color: hsl(198deg, 100%, 6%);
+  background-color: hsl(167, 82%, 65%);
+  color: hsl(198, 100%, 6%);
 }
 
 .main-container {
@@ -138,7 +138,7 @@ li {
   max-width: 1000px;
   margin: 4rem auto;
   text-align: center;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
 }
 .main-text h1 {
   font-size: 4rem;
@@ -146,7 +146,7 @@ li {
   margin-bottom: 2rem;
 }
 .main-text h1 span {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 .main-text h2 {
   display: inline-block;
@@ -161,7 +161,7 @@ li {
   right: -5px;
   width: 0.4rem;
   height: 0.4rem;
-  background-color: hsl(167deg, 61%, 45%);
+  background-color: hsl(167, 61%, 45%);
 }
 .main-text p {
   display: inline-block;
@@ -181,7 +181,7 @@ li {
   height: 10px;
   border-radius: 50px;
   opacity: 20%;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 .main-text p::after {
   content: "";
@@ -193,7 +193,7 @@ li {
   height: 10px;
   border-radius: 50px;
   opacity: 20%;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 
 .grid {
@@ -234,8 +234,7 @@ li {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .image-box img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -243,7 +242,7 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: hsl(0deg, 0%, 10%);
+  background-color: hsl(0, 0%, 10%);
   width: 100%;
   height: 100%;
   opacity: 60%;
@@ -255,18 +254,17 @@ li {
 }
 .image-box-text h2 {
   font-size: 3rem;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   opacity: 80%;
 }
 .image-box-text p {
   font-size: 1.5rem;
   font-weight: 500;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   opacity: 80%;
 }
 
 .primary-header {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
@@ -274,30 +272,36 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: hsl(0deg, 0%, 3%);
-  color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 3%);
+  color: hsl(0, 0%, 100%);
   padding: 1rem 2rem;
   z-index: 9999;
 }
-.primary-header .left-part {
+.primary-header .left-part,
+.primary-header .left-part a {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 1rem;
+  cursor: pointer;
 }
-.primary-header .left-part img {
+.primary-header .left-part img,
+.primary-header .left-part a img {
   width: 50px;
   filter: grayscale(1) invert(1);
 }
-.primary-header .left-part .logo {
+.primary-header .left-part .logo,
+.primary-header .left-part a .logo {
   display: none;
 }
-.primary-header .left-part .logo h1 {
+.primary-header .left-part .logo h1,
+.primary-header .left-part a .logo h1 {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
 }
-.primary-header .left-part .logo h1 span {
-  color: hsl(167deg, 82%, 65%);
+.primary-header .left-part .logo h1 span,
+.primary-header .left-part a .logo h1 span {
+  color: hsl(167, 82%, 65%);
   letter-spacing: 2px;
 }
 .primary-header .right-part .navbar {
@@ -310,7 +314,7 @@ li {
   width: 70%;
   gap: 1.5rem;
   letter-spacing: 1px;
-  background-color: hsl(0deg, 0%, 10%);
+  background-color: hsl(0, 0%, 10%);
   transition: all 1000ms ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   padding: 1rem;
@@ -322,13 +326,13 @@ li {
   flex-direction: column;
 }
 .primary-header .right-part .navbar ul li a {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   font-size: 2rem;
   font-weight: 500;
   transition: all 500ms ease-in-out;
 }
 .primary-header .right-part .navbar ul li a:hover {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 .primary-header .right-part .navbar.active {
   opacity: 1;
@@ -345,7 +349,7 @@ li {
 .primary-header .right-part .ham-menu .line {
   width: 35px;
   height: 0.6rem;
-  background-color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
   transition: all 500ms ease-in-out;
 }
@@ -382,7 +386,7 @@ li {
 }
 .banner-text h1 {
   font-size: 8vh;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   margin-bottom: 2rem;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -390,10 +394,10 @@ li {
   font-family: "Poppins", sans-serif;
 }
 .banner-text h1 span {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 .banner-text p {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   font-size: 1.8rem;
   letter-spacing: 1px;
   margin-bottom: 3rem;
@@ -405,7 +409,7 @@ li {
   transition: all 500ms ease-in-out;
 }
 .banner-text .btn-get:hover {
-  background-color: hsl(167deg, 61%, 45%);
+  background-color: hsl(167, 61%, 45%);
 }
 
 .explore {
@@ -434,8 +438,7 @@ li {
 .about .main-container video {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .tour {
@@ -467,7 +470,7 @@ li {
   font-size: 1rem;
 }
 .tour .main-container .tour-cards-text {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   line-height: 1.7;
 }
 .tour .main-container .tour-cards-text h1 {
@@ -477,7 +480,7 @@ li {
   transition: all 350ms ease-in-out;
 }
 .tour .main-container .tour-cards-text h1:hover {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 .tour .main-container .tour-cards-text p {
   cursor: pointer;
@@ -489,9 +492,8 @@ li {
   display: flex;
   align-items: center;
   flex-direction: row;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-  color: hsl(167deg, 82%, 65%);
+  column-gap: 0.5rem;
+  color: hsl(167, 82%, 65%);
   text-decoration: underline;
 }
 .tour .main-container .tour-cards-text .btn-map svg {
@@ -508,18 +510,18 @@ li {
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: hsl(0deg, 0%, 3%);
+  color: hsl(0, 0%, 3%);
   border-radius: 50px;
   text-align: center;
 }
 .tour .main-container .tour-cards-text .price p {
   padding: 0.6rem;
-  background-color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 100%);
   text-align: center;
   font-size: 1.3rem;
   flex-basis: 35%;
   margin: 0;
-  color: hsl(0deg, 0%, 3%);
+  color: hsl(0, 0%, 3%);
   opacity: 100%;
   font-weight: 700;
   display: flex;
@@ -529,7 +531,7 @@ li {
 .tour .main-container .tour-cards-text .price h2 {
   padding: 1.5rem 0rem;
   border-radius: 0rem 10rem 10rem 0rem;
-  background-color: hsl(0deg, 0%, 90%);
+  background-color: hsl(0, 0%, 90%);
   flex-basis: 75%;
   opacity: 80%;
 }
@@ -541,7 +543,7 @@ li {
   background-position: center;
   width: 100%;
   height: 100vh;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   padding: 5rem 2rem;
   position: relative;
   display: flex;
@@ -561,14 +563,14 @@ li {
   font-size: 4rem;
 }
 .sale .heading h1:hover {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 .sale .heading h2 {
   font-size: 1.6rem;
   text-transform: uppercase;
   padding: 0.5rem 1rem;
-  background-color: hsl(198deg, 100%, 6%);
-  color: hsl(167deg, 82%, 65%);
+  background-color: hsl(198, 100%, 6%);
+  color: hsl(167, 82%, 65%);
   border-radius: 50px;
 }
 .sale .info {
@@ -586,18 +588,18 @@ li {
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: hsl(0deg, 0%, 3%);
+  color: hsl(0, 0%, 3%);
   border-radius: 50px;
   text-align: center;
 }
 .sale .price p {
   padding: 0.6rem;
-  background-color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 100%);
   text-align: center;
   font-size: 1.3rem;
   flex-basis: 35%;
   margin: 0;
-  color: hsl(0deg, 0%, 3%);
+  color: hsl(0, 0%, 3%);
   opacity: 100%;
   font-weight: 700;
   display: flex;
@@ -607,7 +609,7 @@ li {
 .sale .price h2 {
   padding: 1.5rem 0rem;
   border-radius: 0rem 10rem 10rem 0rem;
-  background-color: hsl(0deg, 0%, 90%);
+  background-color: hsl(0, 0%, 90%);
   flex-basis: 75%;
   opacity: 80%;
 }
@@ -635,8 +637,7 @@ li {
   transition: all 450ms ease-in-out;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .media .main-container .image h3 {
   transition: all 450ms ease-in-out;
@@ -644,7 +645,7 @@ li {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   font-size: 3rem;
   text-align: center;
   text-transform: uppercase;
@@ -667,7 +668,7 @@ li {
 .contact .main-container form {
   width: 100%;
   max-width: 600px;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -680,14 +681,14 @@ li {
   padding: 1rem 4rem;
   border: none;
   cursor: pointer;
-  background-color: hsl(167deg, 82%, 65%);
-  color: hsl(198deg, 100%, 6%);
+  background-color: hsl(167, 82%, 65%);
+  color: hsl(198, 100%, 6%);
   font-weight: 700;
   font-size: 1.6rem;
   transition: all 350ms ease-in-out;
 }
 .contact .main-container .btn-send:hover {
-  background-color: hsl(167deg, 61%, 45%);
+  background-color: hsl(167, 61%, 45%);
 }
 .contact .main-container .phone, .contact .main-container .name, .contact .main-container .message {
   width: 100%;
@@ -702,33 +703,25 @@ li {
 .contact .main-container .phone input, .contact .main-container .phone textarea, .contact .main-container .name input, .contact .main-container .name textarea, .contact .main-container .message input, .contact .main-container .message textarea {
   padding: 1rem 1.4rem;
   font-size: 1.3rem;
-  border: 2px solid hsl(167deg, 82%, 65%);
+  border: 2px solid hsl(167, 82%, 65%);
   background-color: transparent;
   outline: none;
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
   resize: none;
 }
-.contact .main-container .phone input::-moz-placeholder, .contact .main-container .phone textarea::-moz-placeholder, .contact .main-container .name input::-moz-placeholder, .contact .main-container .name textarea::-moz-placeholder, .contact .main-container .message input::-moz-placeholder, .contact .main-container .message textarea::-moz-placeholder {
-  color: hsl(0deg, 0%, 100%);
-  opacity: 70%;
-}
-.contact .main-container .phone input:-ms-input-placeholder, .contact .main-container .phone textarea:-ms-input-placeholder, .contact .main-container .name input:-ms-input-placeholder, .contact .main-container .name textarea:-ms-input-placeholder, .contact .main-container .message input:-ms-input-placeholder, .contact .main-container .message textarea:-ms-input-placeholder {
-  color: hsl(0deg, 0%, 100%);
-  opacity: 70%;
-}
 .contact .main-container .phone input::placeholder, .contact .main-container .phone textarea::placeholder, .contact .main-container .name input::placeholder, .contact .main-container .name textarea::placeholder, .contact .main-container .message input::placeholder, .contact .main-container .message textarea::placeholder {
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   opacity: 70%;
 }
 
 footer {
   margin: 5rem auto 0rem auto;
-  background-color: hsl(0deg, 0%, 3%);
+  background-color: hsl(0, 0%, 3%);
 }
 footer .footer-image {
   width: 100%;
   height: 80vh;
-  background: url("https://images.unsplash.com/photo-1510437097452-74ac66e27feb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80");
+  background: url("https://images.unsplash.com/photo-1604067276420-ed543c169968?q=80&w=2674&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -738,8 +731,8 @@ footer .footer-image .overlay2 {
   background: linear-gradient(transparent, rgb(8, 8, 8), rgb(8, 8, 8));
 }
 footer .main-container {
-  background-color: hsl(0deg, 0%, 3%);
-  color: hsl(0deg, 0%, 100%);
+  background-color: hsl(0, 0%, 3%);
+  color: hsl(0, 0%, 100%);
   margin: 0rem auto;
   padding: 1rem 2rem;
   display: grid;
@@ -768,7 +761,7 @@ footer .main-container h1::after {
   left: 1.4rem;
   width: 28px;
   height: 0.4rem;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
   border-radius: 8px;
   opacity: 80%;
 }
@@ -779,7 +772,7 @@ footer .main-container h1::before {
   left: 0;
   width: 0.8rem;
   height: 0.4rem;
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
   border-radius: 8px;
   opacity: 80%;
 }
@@ -805,7 +798,7 @@ footer .main-container .social-media ul li {
   width: 40px;
   aspect-ratio: 1/1;
   background-color: transparent;
-  border: 3px solid hsl(167deg, 82%, 65%);
+  border: 3px solid hsl(167, 82%, 65%);
   border-radius: 100px;
   display: flex;
   justify-content: center;
@@ -813,20 +806,20 @@ footer .main-container .social-media ul li {
   transition: all 350ms ease-in-out;
 }
 footer .main-container .social-media ul li .fill {
-  fill: hsl(167deg, 82%, 65%);
+  fill: hsl(167, 82%, 65%);
 }
 footer .main-container .social-media ul li svg {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
   width: 1.5rem;
 }
 footer .main-container .social-media ul li:hover {
-  background-color: hsl(167deg, 82%, 65%);
+  background-color: hsl(167, 82%, 65%);
 }
 footer .main-container .social-media ul li:hover .fill {
-  fill: hsl(198deg, 100%, 6%);
+  fill: hsl(198, 100%, 6%);
 }
 footer .main-container .social-media ul li:hover svg {
-  color: hsl(198deg, 100%, 6%);
+  color: hsl(198, 100%, 6%);
 }
 footer .main-container .main {
   display: flex;
@@ -844,7 +837,7 @@ footer .main-container .main ul li a {
   transition: all 350ms ease-in-out;
 }
 footer .main-container .main ul li a:hover {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 footer .main-container .contact-info {
   display: flex;
@@ -854,12 +847,12 @@ footer .main-container .contact-info {
 footer .credit {
   margin: 5rem auto 0rem;
   padding: 0 0 4rem 0;
-  color: hsl(0deg, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   text-align: center;
   letter-spacing: 1.2px;
 }
 footer .credit a {
-  color: hsl(167deg, 82%, 65%);
+  color: hsl(167, 82%, 65%);
 }
 
 @media (min-width: 868px) {
@@ -870,7 +863,8 @@ footer .credit a {
     padding: 1rem 6rem;
     gap: 2rem;
   }
-  .primary-header .left-part .logo {
+  .primary-header .left-part .logo,
+  .primary-header .left-part a .logo {
     display: inline-block;
   }
   .primary-header .right-part {
@@ -920,4 +914,6 @@ footer .credit a {
   footer .main-container .main {
     padding: 0 0 0 5rem;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
