--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -326,11 +326,13 @@ li{
 
     // left part 
 
-    .left-part{
+    .left-part,
+    .left-part a{
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 1rem;
+        cursor: pointer;
 
         img{
             width: 50px;
@@ -859,7 +861,7 @@ footer{
     .footer-image{
         width: 100%;
         height: 80vh;
-        background: url('https://images.unsplash.com/photo-1510437097452-74ac66e27feb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80');
+        background: url('https://images.unsplash.com/photo-1604067276420-ed543c169968?q=80&w=2674&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1039,7 +1041,8 @@ footer{
 
         // left part 
         .left-part{
-            .logo{
+            .logo,
+            a .logo{
                 display: inline-block;
             }
         }
