--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -898,8 +898,7 @@ footer{
             filter: grayscale(1) invert(1);
             opacity: 90%;
             margin-bottom: 0.1rem;
-            width: 55px;
-            // display: none;
+            height: 25px;
          }
         p {
             line-height: 1.5;
@@ -938,6 +937,9 @@ footer{
         }
 
         .heading-foo{
+            span {
+                display: flex;
+            }
             h1{
                 margin-bottom: 1rem;
             }
