--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -282,12 +282,11 @@ li {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1rem;
   cursor: pointer;
 }
 .primary-header .left-part img,
 .primary-header .left-part a img {
-  width: 50px;
+  height: 25px;
   filter: grayscale(1) invert(1);
 }
 .primary-header .left-part .logo,
@@ -298,11 +297,6 @@ li {
 .primary-header .left-part a .logo h1 {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
-}
-.primary-header .left-part .logo h1 span,
-.primary-header .left-part a .logo h1 span {
-  color: hsl(167, 82%, 65%);
-  letter-spacing: 2px;
 }
 .primary-header .right-part .navbar {
   opacity: 0;
@@ -325,14 +319,28 @@ li {
   gap: 2rem;
   flex-direction: column;
 }
+.primary-header .right-part .navbar ul li {
+  position: relative;
+}
 .primary-header .right-part .navbar ul li a {
   color: hsl(0, 0%, 100%);
   font-size: 2rem;
   font-weight: 500;
-  transition: all 500ms ease-in-out;
+  transition: all 280ms ease-in-out;
 }
 .primary-header .right-part .navbar ul li a:hover {
   color: hsl(167, 82%, 65%);
+}
+.primary-header .right-part .navbar ul li.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: calc(100% - 10px);
+  border-radius: 2px;
+  left: 5px;
+  bottom: -4px;
+  height: 2px;
+  background-color: hsl(167, 82%, 65%);
 }
 .primary-header .right-part .navbar.active {
   opacity: 1;
@@ -741,9 +749,8 @@ footer .main-container {
 }
 footer .main-container img {
   filter: grayscale(1) invert(1);
-  opacity: 90%;
   margin-bottom: 0.1rem;
-  width: 55px;
+  height: 25px;
 }
 footer .main-container p {
   line-height: 1.5;
@@ -775,6 +782,9 @@ footer .main-container h1::before {
   background-color: hsl(167, 82%, 65%);
   border-radius: 8px;
   opacity: 80%;
+}
+footer .main-container .heading-foo span {
+  display: flex;
 }
 footer .main-container .heading-foo h1 {
   margin-bottom: 1rem;
