--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -1,7 +1,10 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 280ms ease-in-out;
 }
 
 html {
@@ -28,7 +31,9 @@ body {
   background-color: hsl(198, 100%, 6%);
 }
 
-a, a:visited, a:active {
+a,
+a:visited,
+a:active {
   text-decoration: none;
   color: hsl(0, 0%, 100%);
 }
@@ -74,11 +79,9 @@ li {
   font-weight: 700;
   letter-spacing: 1.2px;
   flex-wrap: nowrap;
-  transition: all 700ms ease-in-out;
 }
 .btn svg {
   color: hsl(0, 0%, 100%);
-  transition: all 700ms ease-in-out;
   width: 20px;
 }
 .btn:hover, .btn:visited {
@@ -89,43 +92,6 @@ li {
 }
 .btn:hover svg, .btn:visited svg {
   transform: translateX(600px);
-}
-
-.btn-view-all {
-  position: relative;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  margin: 8rem auto;
-  font-weight: 700;
-  color: hsl(167, 82%, 65%);
-  background-color: transparent;
-  border: 3px solid hsl(167, 82%, 65%);
-  transition: all 500ms ease-in-out;
-}
-.btn-view-all::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: -20px;
-  width: 30px;
-  height: 15px;
-  background-color: hsl(167, 82%, 65%);
-}
-.btn-view-all::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: -20px;
-  width: 30px;
-  height: 15px;
-  background-color: hsl(167, 82%, 65%);
-}
-.btn-view-all:hover {
-  background-color: hsl(167, 82%, 65%);
-  color: hsl(198, 100%, 6%);
 }
 
 .main-container {
@@ -293,7 +259,6 @@ li {
   gap: 1.5rem;
   letter-spacing: 1px;
   background-color: hsl(0, 0%, 10%);
-  transition: all 1000ms ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   padding: 1rem;
 }
@@ -310,12 +275,11 @@ li {
   color: hsl(0, 0%, 100%);
   font-size: 2rem;
   font-weight: 500;
-  transition: all 280ms ease-in-out;
 }
 .primary-header .right-part .navbar ul li a:hover {
   color: hsl(167, 82%, 65%);
 }
-.primary-header .right-part .navbar ul li.active::after {
+.primary-header .right-part .navbar ul li a.active::after {
   content: "";
   display: block;
   position: absolute;
@@ -343,7 +307,6 @@ li {
   height: 0.6rem;
   background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
-  transition: all 500ms ease-in-out;
 }
 .primary-header .right-part .ham-menu.active .line {
   transform-origin: 10px 3px;
@@ -360,7 +323,7 @@ li {
 
 .banner {
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("https://images.unsplash.com/photo-1547626740-02cb6aed9ef8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url("https://images.unsplash.com/photo-1607068891828-f16297950a66?q=80&w=2702&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -398,17 +361,15 @@ li {
 .banner-text .btn-get {
   display: inline-block;
   padding: 1rem 4rem;
-  transition: all 500ms ease-in-out;
 }
 .banner-text .btn-get:hover {
   background-color: hsl(167, 61%, 45%);
 }
 
 .explore {
-  margin: 10rem auto 0rem auto;
   width: 100%;
   height: 100%;
-  padding: 4rem 2rem;
+  padding: 2rem;
 }
 .explore .main-container {
   display: grid;
@@ -417,8 +378,7 @@ li {
 }
 
 .about {
-  margin: 0rem auto;
-  padding: 10rem 2rem 2rem 2rem;
+  padding: 2rem;
 }
 .about .main-container {
   display: grid;
@@ -435,17 +395,18 @@ li {
 
 .tour {
   width: 100%;
-  margin: 0rem auto 0rem auto;
-  padding: 10rem 2rem 2rem 2rem;
+  padding: 2rem;
 }
 .tour .main-container {
-  margin: 5rem auto;
+  margin: 5rem auto 3rem auto;
 }
 .tour .main-container .tour-cards {
-  margin-top: 8rem;
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
+}
+.tour .main-container .tour-cards:not(:first-child) {
+  margin-top: 8rem;
 }
 .tour .main-container .tour-cards .image-box {
   border-radius: 5px;
@@ -469,7 +430,6 @@ li {
   cursor: pointer;
   font-size: 3rem;
   margin-bottom: 1rem;
-  transition: all 350ms ease-in-out;
 }
 .tour .main-container .tour-cards-text h1:hover {
   color: hsl(167, 82%, 65%);
@@ -527,6 +487,21 @@ li {
   flex-basis: 75%;
   opacity: 80%;
 }
+.tour .individual-tours {
+  width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: hsl(167, 82%, 65%);
+  background-color: transparent;
+}
+.tour .individual-tours a {
+  font-size: 2rem;
+  color: hsl(0, 0%, 100%);
+}
+.tour .individual-tours a:hover {
+  color: hsl(167, 82%, 65%);
+}
 
 .sale {
   background: linear-gradient(to top left, rgba(17, 97, 106, 0.3), rgba(255, 255, 255, 0)), url("https://images.unsplash.com/photo-1488415032361-b7e238421f1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80");
@@ -551,7 +526,6 @@ li {
 }
 .sale .heading h1 {
   cursor: pointer;
-  transition: all 350ms ease-in-out;
   font-size: 4rem;
 }
 .sale .heading h1:hover {
@@ -606,16 +580,16 @@ li {
   opacity: 80%;
 }
 
-.media {
-  margin: 0rem auto 0rem auto;
-  padding: 10rem 2rem 2rem 2rem;
+.footage {
+  padding: 2rem;
 }
-.media .main-container {
+.footage .main-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   gap: 2rem;
+  margin-top: 4rem;
 }
-.media .main-container .image {
+.footage .main-container .image {
   position: relative;
   cursor: pointer;
   width: 100%;
@@ -623,16 +597,13 @@ li {
   background-color: #2dbb9c;
   border-radius: 3px;
   overflow: hidden;
-  transition: all 450ms ease-in-out;
 }
-.media .main-container .image img {
-  transition: all 450ms ease-in-out;
+.footage .main-container .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.media .main-container .image h3 {
-  transition: all 450ms ease-in-out;
+.footage .main-container .image h3 {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -643,19 +614,18 @@ li {
   text-transform: uppercase;
   opacity: 0;
 }
-.media .main-container .image:hover {
+.footage .main-container .image:hover {
   transform: scale(1.02);
 }
-.media .main-container .image:hover img {
+.footage .main-container .image:hover img {
   opacity: 70%;
 }
-.media .main-container .image:hover h3 {
+.footage .main-container .image:hover h3 {
   opacity: 1;
 }
 
 .contact {
-  margin: 0rem auto;
-  padding: 2rem 2rem 2rem 2rem;
+  padding: 2rem;
 }
 .contact .main-container form {
   width: 100%;
@@ -677,22 +647,30 @@ li {
   color: hsl(198, 100%, 6%);
   font-weight: 700;
   font-size: 1.6rem;
-  transition: all 350ms ease-in-out;
 }
 .contact .main-container .btn-send:hover {
   background-color: hsl(167, 61%, 45%);
 }
-.contact .main-container .phone, .contact .main-container .name, .contact .main-container .message {
+.contact .main-container .phone,
+.contact .main-container .name,
+.contact .main-container .message {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-.contact .main-container .phone label, .contact .main-container .name label, .contact .main-container .message label {
+.contact .main-container .phone label,
+.contact .main-container .name label,
+.contact .main-container .message label {
   font-size: 1.5rem;
   margin: 1rem 0;
   letter-spacing: 1.2px;
 }
-.contact .main-container .phone input, .contact .main-container .phone textarea, .contact .main-container .name input, .contact .main-container .name textarea, .contact .main-container .message input, .contact .main-container .message textarea {
+.contact .main-container .phone input,
+.contact .main-container .phone textarea,
+.contact .main-container .name input,
+.contact .main-container .name textarea,
+.contact .main-container .message input,
+.contact .main-container .message textarea {
   padding: 1rem 1.4rem;
   font-size: 1.3rem;
   border: 2px solid hsl(167, 82%, 65%);
@@ -701,13 +679,17 @@ li {
   color: hsl(167, 82%, 65%);
   resize: none;
 }
-.contact .main-container .phone input::placeholder, .contact .main-container .phone textarea::placeholder, .contact .main-container .name input::placeholder, .contact .main-container .name textarea::placeholder, .contact .main-container .message input::placeholder, .contact .main-container .message textarea::placeholder {
+.contact .main-container .phone input::placeholder,
+.contact .main-container .phone textarea::placeholder,
+.contact .main-container .name input::placeholder,
+.contact .main-container .name textarea::placeholder,
+.contact .main-container .message input::placeholder,
+.contact .main-container .message textarea::placeholder {
   color: hsl(0, 0%, 100%);
   opacity: 70%;
 }
 
 footer {
-  margin: 2rem auto 0rem auto;
   background-color: hsl(0, 0%, 3%);
 }
 footer .footer-image {
@@ -797,7 +779,6 @@ footer .main-container .social-media ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 350ms ease-in-out;
 }
 footer .main-container .social-media ul li .fill {
   fill: hsl(167, 82%, 65%);
@@ -828,7 +809,6 @@ footer .main-container .main ul {
 }
 footer .main-container .main ul li a {
   font-size: 1.5rem;
-  transition: all 350ms ease-in-out;
 }
 footer .main-container .main ul li a:hover {
   color: hsl(167, 82%, 65%);
